# ClinPort

./: CLAUDE_CODE_PROMPT.md  LICENSE  Makefile  PROJECT-PLAN.md  Project_Documentation.md  README.md  bigquery_client.py  ci.yml  cohort_queries.py  push_scaffold.sh  pyproject.toml
.claude/: claude.md  config.yml  settings.json  settings.local.json
.claude/agents/: notebooklm-ai-expert.md  notebooklm-clinical-expert.md  notebooklm-doc-formatter.md  notebooklm-doc-generator.md  notebooklm-doc-parser.md  notebooklm-mindmap-creator.md
.claude/commands/: notebooklm-clinical-expert.md  notebooklm-generate-all.md  notebooklm-generate-case-study.md  notebooklm-generate-comic.md  notebooklm-generate-flashcards.md  notebooklm-generate-infographic.md  notebooklm-generate-mindmap.md  notebooklm-generate-podcast-audio.md  notebooklm-generate-podcast.md  notebooklm-generate-quiz.md  notebooklm-generate-report.md  notebooklm-generate-slides.md  notebooklm-ingest-sources.md
.claude/hooks/: README.md  enhance-markdown.sh  format-markdown.sh  github-publish-notify.sh  notify-completion.sh  research-logger.sh  safety-guard.sh  screenshot-logger.sh  session-summary.sh  stop-guard.sh  tool-logger.sh
.claude/logs/: security.jsonl  session.jsonl  tools-2025-11-30.jsonl
.claude/planning/: master-command-implementation-plan.md
.claude/prompts/: README.md  blog-atlas-cohort-definitions.md  clinical-informatics-blog-prompts.md  system-prompt-ai-expert.md  system-prompt-blog-publisher.md  system-prompt-clinical-expert.md  system-prompt-doc-formatter.md  system-prompt-doc-parser.md  system-prompt-github-publisher.md  system-prompt-mindmap-creator.md  system-prompt-research-master.md
.claude/scripts/: process-templates.sh
.claude/session-summaries/: session-20251203-063644.md  session-20251203-072107.md  session-20251205-171351.md  session-20251205-172010.md  session-20251207-120241.md  session-20251210-210139.md  session-20251211-060132.md  session-20251212-174416.md  session-20251212-182039.md  session-20251212-184118.md  session-20251212-184126.md  session-20251212-185414.md  session-20251212-190905.md  session-20251212-194955.md  session-20251212-195011.md  session-20251212-195701.md  session-20251214-173526.md  session-20251214-173611.md  session-20251214-173614.md  session-20251214-223014.md  session-20251215-184843.md  (+21 more)
(+64 files in other folders)
